# idealo-scraper

./: .gitignore  README.md  __init__.py  async_scraper.py  config.py  demo.py  exceptions.py  http_client.py  logging_utils.py  models.py  parsing.py  pyproject.toml  requirements.txt  scraper.py
tests/: test_scraper.py
tests/fixtures/: product_page_fr.html  search_results_fr.html
